Implementado para somativa 2, utilizando grafos